<resources>
    <string name="app_name">COCOMO</string>
    <string name="enter_cocomo">Enter you KLOC</string>
    <string name="organic">Organic</string>
    <string name="semi">Semi</string>
    <string name="embedded">Embedded</string>
    <string name="enter_value">Please enter the KLOC</string>
    <string name="Effort">Effort:</string>
    <string name="tDev">Tdev:</string>
    <string name="productivity">Productivity:</string>
    <string name="averageStaffSize">Average Staff Size:</string>
    <string name="organic_model">COCOMO Organic Model for %1$s KLOC</string>
    <string name="semi_detached_model">COCOMO Semi detached Model for %1$s KLOC</string>
    <string name="embedded_model">COCOMO Embedded Model for %1$s KLOC</string>
    <string name="pm"> %.2f PM</string>
    <string name="klon_pm"> %.2f KLOC/PM</string>
    <string name="persons"> %.2f Persons</string>
    <string name="please_select_one">Hint: Please Select one for show result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="for_help">For help</string>
    <string name="my_name">Mohamed Mohamed Taha</string>
    <string name="phone_ksa">(+996) 535020871</string>
    <string name="phone_egypt">(+20) 1007919162</string>
    <string name="name">Name:</string>
    <string name="phone_ks">Phone KSA :</string>
    <string name="phone_eg">Phone Egypt:</string>
    <string name="email">Email:</string>
    <string name="my_email">Mohamed.taha169@yahoo.com</string>
</resources>