<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.MainFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_cocomo"
        android:textColorHint="@color/primary"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/text_view_average_staff_size"
        style="@style/TextViewHint"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="@id/radioGroupStyle"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        android:text="@string/please_select_one" />
    <RadioGroup
        android:id="@+id/radioGroupStyle"
        android:background="@drawable/background_radio_group"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_view_average_staff_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonOrganic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/custom_radio_button"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/organic"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonSemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:button="@null"
            android:background="@drawable/custom_radio_button"
            android:gravity="center"            android:padding="@dimen/_10dp"
            android:text="@string/semi"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonEmbedded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/custom_radio_button"
            android:gravity="center"
            android:layout_margin="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:text="@string/embedded"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>